test/classes/initializers/generics/declarations/concrete-inits-bad.good
concrete-inits-bad.chpl:18: error: unresolved type specifier generated for 'Foo(type imag(64))'
concrete-inits-bad.chpl:5: note: candidates are: Foo(type xVal)
concrete-inits-bad.chpl:11: note:                 Foo(type xVal)
